Added FB/GH/G Icons to Login/Register pages

--- a/ui/html/register.page.tmpl
+++ b/ui/html/register.page.tmpl
@@ -40,6 +40,14 @@
 				</div>
 		
 				<input class="btn loginbtn" type="submit" value="Sign Up">
+				<div class="orclass">
+					<span>or</span>
+				</div>
+				<div class="loginicons">
+					<a href="#"><i class="bi-facebook"></i></a>
+					<a href="#"><i class="bi-github"></i></a>
+					<a href="#"><i class="bi-google"></i></a>
+				</div>
 				<div class="registerlink">
 					<a href="/login" >Already registered? Log In</a>
 				</div>
