--- a/ui/assets/css/mystyle.css
+++ b/ui/assets/css/mystyle.css
@@ -199,7 +199,7 @@ html {
 }
 
 .registerlink {
-    padding-top:30px;
+    padding-top:20px;
 }
 
 .registerlink a {
@@ -227,7 +227,42 @@ border:1px solid #45ffdb;
 .error {
     color: rgb(165, 7, 7);
     font-size: 15px;
+}
 
+.orclass {
+    font-size: 16px;
+    font-weight: 400;
+    color: whitesmoke;
+    text-align: center;
+    border-bottom: 1px solid whitesmoke;
+    line-height: .08em;
+    margin: 16px 0 24px 0;
+    padding-top: 20px;
+}
+
+.orclass span {
+    padding: 0 10px;
+    background-color: #1A1A1B;
+}
+
+.loginicons {
+    color: whitesmoke;
+}
+
+.loginicons i {
+    width: 1em;
+    height: 1em;
+    padding: 0px 10px 0px 10px;
+    font-size: 30px;
+}
+
+.loginicons a {
+    text-decoration: none;
+    color: whitesmoke;
+}
+
+.loginicons a:hover {
+    color: #45ffdb;
 }
 
 
