--- a/ui/html/login.page.tmpl
+++ b/ui/html/login.page.tmpl
@@ -26,6 +26,14 @@
 						{{end}}
 				</div>
 				<input class="btn loginbtn" type="submit" value="Log In">
+				<div class="orclass">
+					<span>or</span>
+				</div>
+				<div class="loginicons">
+					<a href="#"><i class="bi-facebook"></i></a>
+					<a href="#"><i class="bi-github"></i></a>
+					<a href="#"><i class="bi-google"></i></a>
+				</div>
 				<div class="registerlink">
 					<a href="/signup" >New user? Register</a>
 				</div>
