--- a/ui/html/home.page.tmpl
+++ b/ui/html/home.page.tmpl
@@ -22,10 +22,16 @@
 						<div class="insidecatepadding">
 							<div class="catecard">
 								<div class="card-body">
-									<a href="/category/{{.Title}}"><h5 class="catecardtitle stretched-link">{{.Title}}</h5></a>
+								<!-- 	<div class="admintools"> -->
+										<a href="/category/{{.Title}}"><h5 class="catecardtitle stretched-link">{{.Title}}</h5></a>
+									<!-- 	<div class="adminbuttons d-flex justify-content-end">
+											<a class="btn submitbtn" href="">Edit</a>
+											<a class="btn cancelbtn" href="" data-method="delete"
+											data-confirm="Are you sure?"><i class="bi-hammer"></i>Delete</a>
+										</div>
+									</div> -->
 									<p class="card-text">{{.Description}}</p>
 								</div>
-				
 								<!-- <div class="card-footer">
 									<small class="text-muted">341 active threads</small>
 								</div> -->
