--- a/ui/html/showcat.page.tmpl
+++ b/ui/html/showcat.page.tmpl
@@ -97,6 +97,15 @@
 										<!-- <div class="post-comments">8 comments</div> -->
 									</div>
 
+									<!-- ADMINTOOLS
+									<div class="admintools">
+										<div class="adminbuttons d-flex justify-content-end align-self-start">
+											<a class="btn cancelbtn" href="" data-method="delete"
+											data-confirm="Are you sure?"><i class="bi-hammer"></i>Delete</a>
+											<a class="btn submitbtn" href=""><i class="bi-exclamation-diamond"></i>Report</a>
+										</div>
+									</div> -->
+
 								</div>
 							</div>
 						</div>
