--- a/ui/html/showpost.page.tmpl
+++ b/ui/html/showpost.page.tmpl
@@ -73,6 +73,14 @@
 
 						</div>
 						{{end}}
+
+						<!-- <div class="admintools">
+							<div class="adminbuttons d-flex justify-content-end align-self-start">
+								<a class="btn cancelbtn" href="" data-method="delete"
+								data-confirm="Are you sure?"><i class="bi-hammer"></i>Delete</a>
+								<a class="btn submitbtn" href=""><i class="bi-exclamation-diamond"></i>Report</a>
+							</div>
+						</div> -->
 					</div>
 
 					<div class="postimgdiv">
@@ -175,6 +183,14 @@
 											</div>
 										</div>
 										{{end}}
+										
+										<!-- <div class="admintools">
+											<div class="adminbuttons d-flex justify-content-end align-self-start">
+												<a class="btn cancelbtn" href="" data-method="delete"
+												data-confirm="Are you sure?"><i class="bi-hammer"></i>Delete</a>
+												<a class="btn submitbtn" href=""><i class="bi-exclamation-diamond"></i>Report</a>
+											</div>
+										</div> -->
 									</div>
 									<!-- Modal -->
 									<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog"
