Added Apply moderator section to profile

--- a/ui/html/profile.page.tmpl
+++ b/ui/html/profile.page.tmpl
@@ -79,7 +79,7 @@
 										</div>
 									</div>
 								</div>
-							</div>
+							</div>	
 							{{end}}
 
 							{{range .Comments}}
@@ -101,6 +101,35 @@
 						</div>
 					</div>
 				</div>
+				<!-- <div class="applymod">
+					<div class="mainboxinside">
+						<div class="categories">
+								<div class="insidecategories">
+									<div class="insidecatepadding">
+										<div class="catecard">
+											<div class="card-body">
+													<div class="admintools">
+														<a><h5 class="catecardtitle stretched-link">Apply for Moderator</h5></a>
+														<div class="adminbuttons d-flex justify-content-end">
+															<a class="btn submitbtn" href="">Apply</a>
+														</div>
+													</div>
+												<p class="card-text">Want to be the person who keeps peace in kodify?</p>
+											</div>
+										</div>
+									</div>
+								</div>
+						</div>
+					</div>
+				</div> -->
+			</div>
+		</div>
+
+
+
+
+
+
 			</div>
 		</div>
 	</div>
