--- a/ui/assets/css/mystyle.css
+++ b/ui/assets/css/mystyle.css
@@ -695,6 +695,10 @@ border:1px solid #45ffdb;
       color: #45ffdb;
   }
 
+  .applymod {
+      padding-top: 30px;
+  }
+
 /* CREATE POST PAGE */
 
 .createpostcontent {
