working on github authentication. If you already have an account on the site you can login with github

--- a/ui/html/login.page.tmpl
+++ b/ui/html/login.page.tmpl
@@ -30,9 +30,9 @@
 					<span>or</span>
 				</div>
 				<div class="loginicons">
-					<a href="#"><i class="bi-facebook"></i></a>
-					<a href="#"><i class="bi-github"></i></a>
-					<a href="#"><i class="bi-google"></i></a>
+					<a><i class="bi-facebook"></i></a>
+					<a href="https://github.com/login/oauth/authorize?client_id=52144f36461b8f17cc05&scope=user:email"><i class="bi-github"></i></a>
+					<a><i class="bi-google"></i></a>
 				</div>
 				<div class="registerlink">
 					<a href="/signup" >New user? Register</a>
