--- a/ui/html/github.page.tmpl
+++ b/ui/html/github.page.tmpl
@@ -6,11 +6,12 @@
 			<span class="iconboxspan">
 				<img src="/static/css/images/logo_white.png">
 			</span>
-			<form method="post" class="std auth loginform">
+			<form action="/singup" method="post" class="std auth loginform">
+				{{$User := .User}}
 				{{with .Form}}
 				<div>
 					<label class="form-label" for="username"></label>
-					<input class="form-control" type="text" id="username" name="username" placeholder="Username" value="{{.Get "username"}}">
+					<input class="form-control" type="text" id="username" name="username" placeholder="Username">
 					{{with .Errors.Get "username"}}
 						<label class="error">{{.}}</label>
 					{{end}}
@@ -18,7 +19,7 @@
 		
 				<div>
 					<label class="form-label" for="email"></label>
-					<input class="form-control" type="text" id="email" name="email"  placeholder="Email" value="{{.Get "email"}}">
+					<input class="form-control" type="text" id="email" name="email"  placeholder="Email" value="{{$User.Email}}" disabled>
 					{{with .Errors.Get "email"}}
 					<label class="error">{{.}}</label>
 					{{end}}
@@ -40,17 +41,6 @@
 				</div>
 		
 				<input class="btn loginbtn" type="submit" value="Sign Up">
-				<div class="orclass">
-					<span>or</span>
-				</div>
-				<div class="loginicons">
-					<a><i class="bi-facebook"></i></a>
-					<a href="https://github.com/login/oauth/authorize?client_id=52144f36461b8f17cc05&scope=user:email"><i class="bi-github"></i></a>
-					<a><i class="bi-google"></i></a>
-				</div>
-				<div class="registerlink">
-					<a href="/login" >Already registered? Log In</a>
-				</div>
 				{{end}}
 			</form>
 		</div>
