--- a/ui/html/github.page.tmpl
+++ b/ui/html/github.page.tmpl
@@ -6,12 +6,11 @@
 			<span class="iconboxspan">
 				<img src="/static/css/images/logo_white.png">
 			</span>
-			<form action="/singup" method="post" class="std auth loginform">
-				{{$User := .User}}
+			<form action="/signuphub" method="post" class="std auth loginform">
 				{{with .Form}}
 				<div>
 					<label class="form-label" for="username"></label>
-					<input class="form-control" type="text" id="username" name="username" placeholder="Username">
+					<input class="form-control" type="text" id="username" name="username" placeholder="Username" value="{{.Get "username"}}">
 					{{with .Errors.Get "username"}}
 						<label class="error">{{.}}</label>
 					{{end}}
@@ -19,7 +18,7 @@
 		
 				<div>
 					<label class="form-label" for="email"></label>
-					<input class="form-control" type="text" id="email" name="email"  placeholder="Email" value="{{$User.Email}}" disabled>
+					<input class="form-control" type="text" id="email" name="email"  placeholder="Email" value="{{.Get "email"}}" readonly>
 					{{with .Errors.Get "email"}}
 					<label class="error">{{.}}</label>
 					{{end}}
