--- a/ui/html/login.page.tmpl
+++ b/ui/html/login.page.tmpl
@@ -32,14 +32,14 @@
 				<div class="loginicons">
 					<a><i class="bi-facebook"></i></a>
 					<a href="https://github.com/login/oauth/authorize?client_id=52144f36461b8f17cc05&scope=user:email"><i class="bi-github"></i></a>
-					<a><i class="bi-google"></i></a>
+					<a href="https://accounts.google.com/o/oauth2/auth/oauthchooseaccount?client_id=1087259911821-nmcttkbvat9mmkjqrrjl16nahcofdts0.apps.googleusercontent.com&redirect_uri=http%3A%2F%2Flocalhost%3A8090%2Fgoogle&response_type=code&scope=https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fuserinfo.profile%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fuserinfo.email"><i class="bi-google"></i></a>
 				</div>
 				<div class="registerlink">
 					<a href="/signup" >New user? Register</a>
 				</div>
+				{{end}}
 			</form>
 		</div>
 	</div>
 </div>
-{{end}}
 {{end}}
