--- a/ui/html/otherRegister.page.tmpl
+++ b/ui/html/otherRegister.page.tmpl
@@ -6,7 +6,7 @@
 			<span class="iconboxspan">
 				<img src="/static/css/images/logo_white.png">
 			</span>
-			<form action="/signuphub" method="post" class="std auth loginform">
+			<form action="/signup-other" method="post" class="std auth loginform">
 				{{with .Form}}
 				<div>
 					<label class="form-label" for="username"></label>
