First commit to spa branch

--- a/ui/assets/css/mystyle.css
+++ b/ui/assets/css/mystyle.css
@@ -424,6 +424,11 @@ border:1px solid #45ffdb;
     text-decoration: none;
 }
 
+a.catecardtitle:hover{
+    color:#45ffdb;
+}
+
+
 .card-text {
 	overflow: hidden;
 	text-overflow: ellipsis;
