applied the chat box and it's basic functionallity

--- a/ui/assets/css/mystyle.css
+++ b/ui/assets/css/mystyle.css
@@ -13,6 +13,23 @@ label {
     display: flex;
 }
 
+*::-webkit-scrollbar {
+    width: 5px;
+}
+body::-webkit-scrollbar {
+    width: 10px;
+}
+
+*::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
+*::-webkit-scrollbar-thumb {
+    background-color: #3e3e3e;
+    border-radius: 10px;
+    outline: 1px solid #3e3e3e;
+}
+
 /*---------------------HEADERS % FOOTER---------------------*/
 
 
