got the chat extending and collapsing to work

--- a/ui/assets/css/mystyle.css
+++ b/ui/assets/css/mystyle.css
@@ -913,24 +913,27 @@ span.badge.me-2.bg-primary {
 
 .activity .user .status {
     border-radius: 10px;
-    border: 1px solid #676869;
-    color: #676869;
+    border: 1px solid #45ffdb;
+    background-color: #45ffdb;
+    /* color: #676869; */
 
     width: 10px;
     height: 10px;
 }
 
-.activity .user .name {
-    margin-bottom: 0;
-    color: #757575;
+.activity .user.away .status {
+    background-color: transparent;
+    border: 1px solid #676869;
 }
 
-.status.active {
-    background-color: #45ffdb;
-    border-color: #45ffdb !important;
+.activity .user .name {
+    margin-bottom: 0;
+    color: whitesmoke;
 }
-.status.away {
-    background-color: none;
+
+.activity .user.away .name {
+    margin-bottom: 0;
+    color: #757575;
 }
 
 .activity .user:hover {
